@@ -110,6 +110,8 @@ IceInternal::Outgoing::Outgoing(ConnectionI* connection, Reference* ref, const s
 bool
 IceInternal::Outgoing::invoke()
 {
+    assert(_state == StateUnsent);
+
     _os.endWriteEncaps();
     
     switch(_reference->getMode())
@@ -226,11 +228,12 @@ IceInternal::Outgoing::invoke()
 	    //
 	    // For oneway and datagram requests, the connection object
 	    // never calls back on this object. Therefore we don't
-	    // need to lock the mutex, keep track of state, or save
-	    // exceptions. We simply let all exceptions from sending
-	    // propagate to the caller, because such exceptions can be
-	    // retried without violating "at-most-once".
+	    // need to lock the mutex or save exceptions. We simply
+	    // let all exceptions from sending propagate to the
+	    // caller, because such exceptions can be retried without
+	    // violating "at-most-once".
 	    //
+	    _state = StateInProgress;
 	    _connection->sendRequest(&_os, 0, _compress);
 	    break;
 	}
@@ -243,12 +246,38 @@ IceInternal::Outgoing::invoke()
 	    // regular oneways and datagrams (see comment above)
 	    // apply.
 	    //
+	    _state = StateInProgress;
 	    _connection->finishBatchRequest(&_os, _compress);
 	    break;
 	}
     }
 
     return true;
+}
+
+void
+IceInternal::Outgoing::abort(const LocalException& ex)
+{
+    assert(_state == StateUnsent);
+    
+    //
+    // If we didn't finish a batch oneway or datagram request, we must
+    // notify the connection about that we give up ownership of the
+    // batch stream.
+    //
+    if(_reference->getMode() == Reference::ModeBatchOneway || _reference->getMode() == Reference::ModeBatchDatagram)
+    {
+	_connection->abortBatchRequest();
+	
+	//
+	// If we abort a batch requests, we cannot retry, because not
+	// only the batch request that caused the problem will be
+	// aborted, but all other requests in the batch as well.
+	//
+	throw NonRepeatable(*_exception.get());
+    }
+    
+    ex.ice_throw();
 }
 
 void
