@@ -1,6 +1,9 @@
 Changes since version 1.5.1
 ---------------------------
 
+- Exceptions raised while marshaling data for batch requests resulted
+  in a connection deadlock. This has been fixed.
+
 - Fixed a bug in slice2cs: the generated code was incorrect
   for dictionaries with sequence value types, if that sequence
   value type was mapped to an array.
